<resources>
    <string name="app_name">submisi-2-dicoding-bfaa</string>

    <!-- Other string resources-->

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>


    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>https://avatars0.githubusercontent.com/u/66577?v=4</item>
        <item>https://avatars0.githubusercontent.com/u/9877145?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/869684?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/227486?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/1521451?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/497670?v=4</item>
        <item>https://avatars3.githubusercontent.com/u/363917?v=4</item>
        <item>https://avatars2.githubusercontent.com/u/2031493?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/3713580?v=4</item>
        <item>https://avatars1.githubusercontent.com/u/4090245?v=4</item>
    </string-array>


    <string name="reminder_setting">Reminder Setting</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="setting">Setting</string>
    <string name="daily_message">Find new favorite user on Github</string>
    <string name="work_in">work in</string>
    <string name="location">location</string>
    <string name="kosong">0</string>
    <string name="follwing">following</string>
    <string name="separator">". "</string>
    <string name="follwer">follower</string>
    <string name="count">0</string>
    <string name="repo">repository</string>
    <string name="find_username">find username</string>
    <string name="folwer">follower</string>

</resources>