<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:background="@color/teal_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_add_24"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:id="@+id/layoutLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/work_in"
                            android:src="@drawable/ic_baseline_location_city_24"
                            app:tint="@android:color/black" />

                        <TextView
                            android:id="@+id/txt_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/work_in"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/location"
                            android:src="@drawable/ic_baseline_location_on_24"
                            app:tint="@android:color/black" />

                        <TextView
                            android:id="@+id/txt_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@string/kosong"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follwing"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/separator"
                            app:srcCompat="@android:drawable/presence_invisible"
                            app:tint="@android:color/black" />

                        <TextView
                            android:id="@+id/txt_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@string/kosong"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follwer"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_repositories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/count"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repo" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatars"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:src="@android:color/darker_gray"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="1dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_container"
                android:background="@color/teal_700"
                android:minHeight="?actionBarSize"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorHeight="2dp"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@id/tabs" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>